--- a/gateway/package.json
+++ b/gateway/package.json
@@ -32,5 +32,8 @@
     "ts-node": "^10.9.1",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
