Update env example

--- a/main-service/.env.example
+++ b/main-service/.env.example
@@ -3,7 +3,7 @@ HOST="http://localhost"
 PORT=5002
 
 # API
-AUTH_URL="http://localhost:5001/api"
+AUTH_API="http://localhost:5001/api"
 TASK_API="http://localhost:5003/api"
 
 # Database
