--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,66 @@
-upstream auth {
-  server localhost:5001;
-}
+events {}
 
-upstream main {
-  server localhost:5002;
-}
-
-upstream task {
-  server localhost:5003;
-}
-
-server {
-  listen 5000;
-
-  location ~ ^/api/(auth|user|role)$ {
-    proxy_pass http://auth/api/$1;
+http {
+  upstream auth {
+    server localhost:5001;
   }
 
-  location ~ ^/api/(client|project)$ {
-    proxy_pass http://main/api/$1;
+  upstream main {
+    server localhost:5002;
   }
 
-  location ~ ^/api/(kategori-task|task|subtask|komentar)$ {
-    proxy_pass http://task/api/$1;
+  upstream task {
+    server localhost:5003;
+  }
+
+  server {
+    listen 5000;
+
+    # Auth Service
+    location /api/auth {
+      proxy_pass http://auth/api/auth;
+    }
+
+    location /api/user {
+      proxy_pass http://auth/api/user;
+    }
+
+    location /api/role {
+      proxy_pass http://auth/api/role;
+    }
+
+    # Main Service
+    location /api/client {
+      proxy_pass http://main/api/client;
+    }
+
+    location /api/project {
+      proxy_pass http://main/api/project;
+    }
+
+    # Task Service
+    location /api/kategori-task {
+      proxy_pass http://task/api/kategori-task;
+    }
+
+    location /api/task {
+      proxy_pass http://task/api/task;
+    }
+
+    location /api/label-task {
+      proxy_pass http://task/api/label-task;
+    }
+
+    location /api/komentar {
+      proxy_pass http://task/api/komentar;
+    }
+
+    location /api/subtask {
+      proxy_pass http://task/api/subtask;
+    }
+
+    location /api/label-subtask {
+      proxy_pass http://task/api/label-subtask;
+    }
   }
 }
