--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,96 @@
-version: '3.8'
+version: "3.8"
 services:
   auth-service:
-    build: ./auth-service
+    build:
+      context: ./auth-service
+      dockerfile: Dockerfile
     ports:
-      - "5001:8080"
+      - "5001:5001"
+    image: auth-service
+    container_name: auth-service
+    restart: unless-stopped
+    env_file:
+      - ./auth-service/.env
+    networks:
+      - network
+
+  db-auth:
+    image: mysql:5.7
+    container_name: db-auth
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: nore_task_auth
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+      MYSQL_USER: root
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    networks:
+      - network
+
   main-service:
-    build: ./main-service
+    build:
+      context: ./main-service
+      dockerfile: Dockerfile
     ports:
-      - "5002:8080"
+      - "5002:5002"
+    image: main-service
+    container_name: main-service
+    restart: unless-stopped
+    env_file:
+      - ./main-service/.env
+    networks:
+      - network
+
+  db-main:
+    image: mysql:5.7
+    container_name: db-main
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: nore_task_main
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+      MYSQL_USER: root
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    networks:
+      - network
+
   task-service:
-    build: ./task-service
+    build:
+      context: ./task-service
+      dockerfile: Dockerfile
     ports:
-      - "5003:8080"
+      - "5003:5003"
+    image: task-service
+    container_name: task-service
+    restart: unless-stopped
+    env_file:
+      - ./task-service/.env
+    networks:
+      - network
+
+  db-task:
+    image: mysql:5.7
+    container_name: db-task
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: nore_task_task
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_PASSWORD: root
+      MYSQL_USER: root
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    networks:
+      - network
+
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - "5000:80"
+    networks:
+      - network
+    
+
+networks:
+  network:
+    driver: bridge
