--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,66 +1,62 @@
-events {}
+upstream auth {
+  server auth-service:5001;
+}
 
-http {
-  upstream auth {
-    server localhost:5001;
+upstream main {
+  server main-service:5002;
+}
+
+upstream task {
+  server task-service:5003;
+}
+
+server {
+  listen 80;
+
+  # Auth Service
+  location /api/auth {
+    proxy_pass http://auth/api/auth;
   }
 
-  upstream main {
-    server localhost:5002;
+  location /api/user {
+    proxy_pass http://auth/api/user;
   }
 
-  upstream task {
-    server localhost:5003;
+  location /api/role {
+    proxy_pass http://auth/api/role;
   }
 
-  server {
-    listen 5000;
+  # Main Service
+  location /api/client {
+    proxy_pass http://main/api/client;
+  }
 
-    # Auth Service
-    location /api/auth {
-      proxy_pass http://auth/api/auth;
-    }
+  location /api/project {
+    proxy_pass http://main/api/project;
+  }
 
-    location /api/user {
-      proxy_pass http://auth/api/user;
-    }
+  # Task Service
+  location /api/kategori-task {
+    proxy_pass http://task/api/kategori-task;
+  }
 
-    location /api/role {
-      proxy_pass http://auth/api/role;
-    }
+  location /api/task {
+    proxy_pass http://task/api/task;
+  }
 
-    # Main Service
-    location /api/client {
-      proxy_pass http://main/api/client;
-    }
+  location /api/label-task {
+    proxy_pass http://task/api/label-task;
+  }
 
-    location /api/project {
-      proxy_pass http://main/api/project;
-    }
+  location /api/komentar {
+    proxy_pass http://task/api/komentar;
+  }
 
-    # Task Service
-    location /api/kategori-task {
-      proxy_pass http://task/api/kategori-task;
-    }
+  location /api/subtask {
+    proxy_pass http://task/api/subtask;
+  }
 
-    location /api/task {
-      proxy_pass http://task/api/task;
-    }
-
-    location /api/label-task {
-      proxy_pass http://task/api/label-task;
-    }
-
-    location /api/komentar {
-      proxy_pass http://task/api/komentar;
-    }
-
-    location /api/subtask {
-      proxy_pass http://task/api/subtask;
-    }
-
-    location /api/label-subtask {
-      proxy_pass http://task/api/label-subtask;
-    }
+  location /api/label-subtask {
+    proxy_pass http://task/api/label-subtask;
   }
 }
