Remove regex from UserCreate

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,17 @@
 upstream auth {
-  server auth-service:5001;
+  server localhost:5001;
 }
 
 upstream main {
-  server main-service:5002;
+  server localhost:5002;
 }
 
 upstream task {
-  server task-service:5003;
+  server localhost:5003;
 }
 
 server {
-  listen 5000;
+  listen 80;
 
   # Auth Service
   location /api/auth {
