--- a/task-service/.env
+++ b/task-service/.env
@@ -7,4 +7,4 @@ AUTH_API="http://localhost:5001/api"
 MAIN_API="http://localhost:5002/api"
 
 # Database
-DATABASE_URL="mysql://admin:root@localhost:3306/nore_task_task"
+DATABASE_URL="mysql://root@localhost:3306/nore_task_task"
