--- a/auth-service/.env
+++ b/auth-service/.env
@@ -10,4 +10,4 @@ REFRESH_TOKEN_SECRET=secret
 TASK_API="http://localhost:5003/api"
 
 # Database
-DATABASE_URL="mysql://admin:root@localhost:3306/nore_task_auth"
+DATABASE_URL="mysql://root@localhost:3306/nore_task_auth"
