--- a/main-service/.env
+++ b/main-service/.env
@@ -7,4 +7,4 @@ AUTH_API="http://localhost:5001/api"
 TASK_API="http://localhost:5003/api"
 
 # Database
-DATABASE_URL="mysql://admin:root@localhost:3306/nore_task_main"
+DATABASE_URL="mysql://root@localhost:3306/nore_task_main"
