--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -10,6 +10,10 @@ COPY . .
 
 RUN npx prisma generate
 
+# RUN npx prisma migrate dev --name init
+
+# RUN npx prisma db seed
+
 EXPOSE 5001
 
 CMD [ "npm", "run", "dev" ]
