--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,15 +4,15 @@ events {
 
 http {
   upstream auth {
-    server localhost:5001;
+    server 127.0.0.1:5001;
   }
 
   upstream main {
-    server localhost:5002;
+    server 127.0.0.1:5002;
   }
 
   upstream task {
-    server localhost:5003;
+    server 127.0.0.1:5003;
   }
 
   server {
